# lamatriz.ai

./: CNAME  README.md  api.html  consulting.html  contact.html  gnh-work-statement.html  index.html  oracle.html  privacy.html  pyproject.toml  requirements.txt  socials.html  soulcoin.html  style.css  thesis.html
assets/: la matrice.csv
assets/css/: style.css
assets/data/: la matrice plus.csv  la matrice.csv
backend/api/: cache.py  serializers.py  urls.py  views.py
core/: analyze.py  assets.py  data.py  gnh.py  models.py  scoring.py
docs/: api.html  consulting.html  contact.html  oracle.html  socials.html  soulcoin.html
notebooks/: color plotter.ipynb
pages/: api.html  contact.html
tests/: test_analyze.py
