[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lamatriz"
version = "0.1.0"
description = "La Matriz Consulting Semantic Color Math API"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "spacy",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lamatriz*"]
