[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lamatriz-core"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "spacy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]
